# rust-aws-caller-identity

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
